--- a/pessoal.html
+++ b/pessoal.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="variables.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,
+    wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -28,6 +29,7 @@
         </ul>
     </nav>
 
+    <!-- cabecalho-->
     <header>
         <h1>Olá, bem-vindo!</h1>
         <h2>Quem sou eu?</h2>
@@ -48,6 +50,7 @@
         <h2>Mais um pouco sobre mim:</h2>
     </header>
 
+    <!--parte principal da pagina-->
     <main>
         <section>
             <h3>Estudos e Mercado de Trabalho</h3>
@@ -93,5 +96,14 @@
             </p>
         </section>
     </main>
+
+    <!--rodape-->
+    <footer>
+        <p> GUSTAVO ALESSSANDRO</p>
+        <img src="email.png">
+        <p>gualessandro2017@gmail.com</p>
+        <img src="telefone.png">
+        <p>+55(35)98828-4714</p>
+    </footer>
 </body>
 </html>
