estilização da pagina pessoal, ainda incompleta

--- a/pessoal.html
+++ b/pessoal.html
@@ -31,14 +31,12 @@
 
     <!-- cabecalho-->
     <header>
-        <h1>Olá, bem-vindo!</h1>
-        <h2>Quem sou eu?</h2>
-        <div class="fotoeu">
-            <img src="fotoeu.jpg">
-        </div>
-        <div class="textoeu">
+        <h2>Olá, bem-vindo!</h2>
+        <h1>Quem sou eu?</h1>
+        <div class="eu">
+            <img class="fotoeu" src="fotoeu.jpg">
             <p>
-                Meu nome é Gustavo Alessandro de Souza Sabino, nasci em 7 de julho 
+                   Meu nome é Gustavo Alessandro de Souza Sabino, nasci em 7 de julho 
                 <br>
                 de 2005, em Lavras, Minas Gerais. Desde pequeno, sempre fui curioso
                 <br> 
@@ -55,7 +53,7 @@
         <section>
             <h3>Estudos e Mercado de Trabalho</h3>
             <p>
-                Atualmente, sou estudante na Unilavras e na UFLA 
+                   Atualmente, sou estudante na Unilavras e na UFLA 
                 (Universidade Federal de Lavras). Na Unilavras, estou cursando
                  o segundo período do curso de Análise e Desenvolvimento de 
                  Sistemas. Já na UFLA, também no segundo período, curso Ciências 
@@ -71,7 +69,8 @@
                 No meu tempo livre, gosto de praticar futebol, que é o esporte
                  que mais me agrada. Além disso, adoro assistir a filmes e passar
                  um tempo no celular, seja navegando nas redes sociais 
-                ou jogando.
+                ou jogando.Essas atividades me ajudam a descontrair e a 
+                aproveitar melhor meu tempo livre.
             </p>
         </section>
 
