finalizado a pagina pessoal, o rodape e cabeçalho de todos, mas com possibilidade de mudança

--- a/ia.html
+++ b/ia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pessoal</title>
+    <title>IA</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="variables.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,11 +46,16 @@
 
     <!--rodape-->
     <footer>
-        <p> GUSTAVO ALESSSANDRO</p>
-        <img src="email.png">
-        <p>gualessandro2017@gmail.com</p>
-        <img src="telefone.png">
-        <p>+55(35)98828-4714</p>
+        <p class="nomerodape"> GUSTAVO ALESSSANDRO</p>
+        <div>
+            <img src="email.png">
+            <p>gualessandro2017@gmail.com</p>
+        </div>
+        <div>
+            <img src="telefone.png">
+            <p>+55(35)98828-4714</p>
+        </div>
     </footer>
+
 </body>
 </html>
