--- a/pessoal.html
+++ b/pessoal.html
@@ -98,11 +98,16 @@
 
     <!--rodape-->
     <footer>
-        <p> GUSTAVO ALESSSANDRO</p>
-        <img src="email.png">
-        <p>gualessandro2017@gmail.com</p>
-        <img src="telefone.png">
-        <p>+55(35)98828-4714</p>
+        <p class="nomerodape"> GUSTAVO ALESSSANDRO</p>
+        <div>
+            <img src="email.png">
+            <p>gualessandro2017@gmail.com</p>
+        </div>
+        <div>
+            <img src="telefone.png">
+            <p>+55(35)98828-4714</p>
+        </div>
     </footer>
+
 </body>
 </html>
