modificação da pagina contato e leve modificação na pagina pessoal

--- a/contato.html
+++ b/contato.html
@@ -16,6 +16,7 @@
 
     <!-- barra de navegacao-->
     <nav>
+        <h2 class="ola">Olá, bem-vindo!</h2>
         <ul>
             <li>
                 <a href="pessoal.html">Pessoal</a>
@@ -31,17 +32,74 @@
 
     <!-- cabecalho-->
     <header>
-        <h1>Olá</h1>
+        <h1>Contato</h1>
+        <p>
+            Estamos aqui para ajudar! Se você tiver alguma dúvida, 
+            sugestão ou precisar de assistência, não hesite em entrar em 
+            contato conosco.<br> Você pode nos alcançar através dos seguintes 
+            meios:
+        </p>
     </header>
 
     <!--parte principal da pagina-->
     <main>
         <section>
-            <h3>teste</h3>
+            <h3>Formulário de Contato</h3>
             <p>
-                TESTE
+                Preencha o formulário abaixo com suas informações e mensagem. 
+                Nossa equipe responderá o mais rápido possível.
             </p>
+            <form>
+                <input type="text" class="formi" placeholder="Seu Nome">
+                <br>
+                <input type="text" class="formi" placeholder="Seu Email">
+                <br>
+                <input type="text" class="formi" placeholder="Assunto">
+                <br>
+            </form>
+            <form class="form">
+                <input type="text" class="mensagemform" placeholder="Mensagem">
+            </form>
+        </div>
+        <button>Enviar</button>
+
+        <p class="contatoopcoes">
+            Prefere enviar um email diretamente? Você pode nos contatar em: 
+        </p>
+
+        <section>
+            <h3>Email</h3>
+            <div class="divcontato">
+                <img src="email.png">
+                <p>
+                    gualessandro2017@gmail.com
+                </p>
+            </div>
         </section>
+
+        <section>
+            <h3>Instagram</h3>
+            <div class="divcontato">
+                <img src="instagram.png">
+                <p>
+                    @gustavo.alessandro07
+                </p>
+            </div>
+        </section>
+
+        <section>
+            <h3>Telefone e WhatsApp</h3>
+            <div class="divcontato">
+                <div>
+                    <img src="telefone.png">
+                    <img src="whatsapp.png">
+                </div>
+                <p>
+                    +55 (35) 98828-4714
+                </p>
+            </div>
+        </section>
+
     </main>
 
     <!--rodape-->
