--- a/ia.html
+++ b/ia.html
@@ -16,6 +16,7 @@
 
     <!-- barra de navegacao-->
     <nav>
+        <h2 class="ola">Olá, bem-vindo!</h2>
         <ul>
             <li>
                 <a href="pessoal.html">Pessoal</a>
