--- a/pessoal.html
+++ b/pessoal.html
@@ -16,6 +16,7 @@
 
     <!-- barra de navegacao-->
     <nav>
+        <h2 class="ola">Olá, bem-vindo!</h2>
         <ul>
             <li>
                 <a href="pessoal.html">Pessoal</a>
@@ -31,11 +32,10 @@
 
     <!-- cabecalho-->
     <header>
-        <h2>Olá, bem-vindo!</h2>
-        <h1>Quem sou eu?</h1>
+        <h1 class="titpessoal">Quem sou eu?</h1>
         <div class="eu">
-            <img class="fotoeu" src="fotoeu.jpg">
-            <p>
+            <img class="fotoeu" src="fotoeu.jpg" alt="foto de perfil">
+            <p class="introducao">
                    Meu nome é Gustavo Alessandro de Souza Sabino, nasci em 7 de julho 
                 <br>
                 de 2005, em Lavras, Minas Gerais. Desde pequeno, sempre fui curioso
