--- a/ia.html
+++ b/ia.html
@@ -32,16 +32,80 @@
 
     <!-- cabecalho-->
     <header>
-        <h1>Olá</h1>
+        <h1>Inteligência Artificial</h1>
     </header>
 
     <!--parte principal da pagina-->
     <main>
         <section>
-            <h3>teste</h3>
-            <p>
-                TESTE
-            </p>
+            <h3>O que é a Inteligência Artificial(IA)</h3>
+            <div class="maindiv">
+                <img class="mainimg" src="roboia.png" alt="Robo IA">
+                <p>
+                    A Inteligência Artificial (IA) é um campo da Ciência da 
+                    Computação que utiliza machine learning, redes neurais e automação
+                     para analisar um gigantesco banco de dados e identificar padrões, 
+                     tomando decisões com base nessas análises. A IA tem uma resposta 
+                     mais rápida que a mente humana e geralmente atua na geração de 
+                     textos ou imagens, além de comandar e processar dados de sensores.
+                </p>
+            </div>
+        </section>
+
+        <section>
+            <h3>Aplicações da IA</h3>
+            <div class="maindiv">
+                <img class="mainimg" src="agri.png" alt="Trator Autônomo">
+                <ol>
+                    <li>
+                        As aplicações da IA são inúmeras, destacando-se em diversas áreas. 
+                        Na automação, a criação de carros autônomos e o comando de 
+                        indústrias são exemplos notáveis. A IA, com visão computacional e
+                        reconhecimento de padrões, pode detectar tudo ao seu redor, prever
+                        ações e identificar possíveis erros. Isso não só aumenta a
+                        eficiência, mas também a segurança nas operações industriais e 
+                        no trânsito.
+                    </li>
+                    <li>
+                        No reconhecimento de voz e imagens, a IA ajuda na segurança das 
+                        pessoas, tanto em locais públicos quanto em ambientes virtuais, 
+                        como aplicativos de bancos. Em locais públicos, câmeras com IA 
+                        podem identificar comportamentos suspeitos e alertar as
+                        autoridades. Em ambientes virtuais, a IA pode verificar a 
+                        identidade dos usuários, prevenindo fraudes e acessos não
+                        autorizados.
+                    </li>
+                    <li>
+                        Os assistentes virtuais são talvez a aplicação mais popular da IA,
+                        pois têm mais contato com as pessoas e ajudam no cotidiano.
+                        Eles automatizam tarefas simples, controlam dispositivos
+                        domésticos, agendam compromissos e até dão opiniões 
+                        personalizadas. Assistentes como Alexa, Siri e Google Assistant 
+                        são exemplos de como a IA pode facilitar a vida diária.
+                    </li>
+                </ol>
+            </div>
+        </section>
+        
+        
+        <section>
+            <h3>Como vejo o futuro da IA</h3>
+            <div class="maindiv">
+                <img class="mainimg" src="visao.png" alt="Visão da IA">
+                <p>
+                    Para mim, a IA crescerá ainda mais, automatizando o mundo inteiro,
+                     aumentando a comodidade das pessoas, ao mesmo tempo que melhora a 
+                     segurança e a eficiência das tarefas e produtos criados. Acredito 
+                     que a IA será fundamental na resolução de problemas complexos, 
+                     desde a saúde até a sustentabilidade ambiental, tornando o mundo 
+                     um lugar melhor para todos.
+                </p>
+            </div>
+        </section>
+
+        <section>
+            <p>Saiba mais no link abaixo</p>
+            <a href="https://brasilescola.uol.com.br/informatica/inteligencia-artificial.htm#google_vignette" class="btn">Ir para o link</a>
         </section>
     </main>
 
