--- a/pessoal.html
+++ b/pessoal.html
@@ -52,7 +52,7 @@
     <main>
         <section>
             <h3>Estudos e Mercado de Trabalho</h3>
-            <p>
+            <p class="mainp">
                    Atualmente, sou estudante na Unilavras e na UFLA 
                 (Universidade Federal de Lavras). Na Unilavras, estou cursando
                  o segundo período do curso de Análise e Desenvolvimento de 
@@ -65,7 +65,7 @@
 
         <section>
             <h3>Hobbies</h3>
-            <p>
+            <p class="mainp">
                 No meu tempo livre, gosto de praticar futebol, que é o esporte
                  que mais me agrada. Além disso, adoro assistir a filmes e passar
                  um tempo no celular, seja navegando nas redes sociais 
@@ -76,7 +76,7 @@
 
         <section>
             <h3>Conhecimentos na Área de TI (Tecnologia da Informação)</h3>
-            <p>
+            <p class="mainp">
                 Apesar de estar apenas começando na área de TI, já adquiri 
                 conhecimentos em linguagens de programação como C++ e Python. 
                 Também estou familiarizado com algumas teorias e aplicações da 
@@ -86,7 +86,7 @@
         
         <section>
             <h3>Objetivos Futuros</h3>
-            <p>
+            <p class="mainp">
                 Meu objetivo no futuro é apoiar minha família e me tornar um 
                 excelente profissional na área de TI. Pretendo adquirir um 
                 conhecimento abrangente, mas com foco especial na criação e 
